--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -4,253 +4,271 @@ a {
 }
 
 html {
-    color-scheme: light;
+  color-scheme: light;
+}
+  
+body {
+  background-color: #fff;
+  color: #2c3e50;
+}
+
+td, th {
+  border: 1px solid #dfe2e5;
+}
+
+tr:nth-child(even) {
+  background-color: #f3f4f5;
+}
+
+hr {
+  border: 1px solid #dfe2e5;
+}
+
+.search {
+  color: #2c3e50;
+  border: 1px solid #eaecef;
+  background: #fff url(@/assets/search.svg) 0.6rem 0.5rem no-repeat;
+  background-size: 1rem;
+}
+
+.chartDropdownBox {
+  background-color: #e7eaed;
+  color: #000;
+}
+
+footer {
+  border-top: 1px solid #dfe2e5;
+  background-color: #f3f4f5;
+}
+
+.customContainer {
+  border-color: #e6edef;
+  background-color: #e6edef;
+}
+  
+@media (prefers-color-scheme: dark) {
+  html {
+    color-scheme: dark !important;
   }
   
   body {
-    background-color: #fff;
-    color: #2c3e50;
+    background-color: #22272e !important;
+    color: #adbac7 !important;
   }
-  
+
   td, th {
-    border: 1px solid #dfe2e5;
+    border: 1px solid #34404c !important;
   }
   
   tr:nth-child(even) {
-    background-color: #f3f4f5;
+    background-color: #2b313a !important;
   }
-  
+
   hr {
-    border: 1px solid #dfe2e5;
+    border: 1px solid #34404c !important;
   }
-  
+
   .search {
-    color: #2c3e50;
-    border: 1px solid #eaecef;
-    background: #fff url(@/assets/search.svg) 0.6rem 0.5rem no-repeat;
-    background-size: 1rem;
+    color: #adbac7 !important;
+    border: 1px solid #3e4c5a !important;
+    background: #22272e url(@/assets/search.svg) 0.6rem 0.5rem no-repeat !important;
+    background-size: 1rem !important;
   }
-  
+
   .chartDropdownBox {
-    background-color: #e7eaed;
-    color: #000;
+    color: #adbac7 !important;
+    background-color: #34404c !important;
   }
-  
+
   footer {
-    border-top: 1px solid #dfe2e5;
-    background-color: #f3f4f5;
+    border-top: 1px solid #34404c !important;
+    background-color: #2b313a !important;
   }
-  
-  @media (prefers-color-scheme: dark) {
-    html {
-      color-scheme: dark !important;
-    }
-    
-    body {
-      background-color: #22272e !important;
-      color: #adbac7 !important;
-    }
-  
-    td, th {
-      border: 1px solid #34404c !important;
-    }
-    
-    tr:nth-child(even) {
-      background-color: #2b313a !important;
-    }
-  
-    hr {
-      border: 1px solid #34404c !important;
-    }
-  
-    .search {
-      color: #adbac7 !important;
-      border: 1px solid #3e4c5a !important;
-      background: #22272e url(@/assets/search.svg) 0.6rem 0.5rem no-repeat !important;
-      background-size: 1rem !important;
-    }
-  
-    .chartDropdownBox {
-      color: #adbac7 !important;
-      background-color: #34404c !important;
-    }
-  
-    footer {
-      border-top: 1px solid #34404c !important;
-      background-color: #2b313a !important;
-    }
+
+  .customContainer {
+    border-color: #2b313a;
+    background-color: #2b313a;
   }
-  
-  body {
-    margin: 0;
-    font-family: arial, sans-serif;
-  }
-  
-  table {
-    font-family: arial, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
-  }
-  
-  td, th {
-    text-align: left;
-    padding: 8px;
-  }
-  
-  label, input {
-    margin-right: .5em;
-  }
-  
+}
+
+body {
+  margin: 0;
+  font-family: arial, sans-serif;
+}
+
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  text-align: left;
+  padding: 8px;
+}
+
+label, input {
+  margin-right: .5em;
+}
+
+.main {
+  margin: auto;
+  width: 70%;
+}
+
+footer {
+  padding: .7em 2em;
+  margin: auto;
+}
+
+.centerText {
+  text-align: center;
+}
+
+@media (max-width: 1100px) {
   .main {
-    margin: auto;
-    width: 70%;
+    width: 90%;
   }
-  
-  footer {
-    padding: .7em 2em;
-    margin: auto;
+
+  .tableContainer { 
+      width: 100% !important;
+      overflow-x: scroll; 
   }
-  
-  .centerText {
-    text-align: center;
+
+  .tableMinWidth {
+    min-width: 200px;
   }
-  
-  @media (max-width: 1100px) {
-    .main {
-      width: 90%;
-    }
-  
-    .tableContainer { 
-        width: 100% !important;
-        overflow-x: scroll; 
-    }
-  
-    .tableMinWidth {
-      min-width: 200px;
-    }
-  }
-  
-  .chartDropdownWrapper {
-    position: relative;
-  }
-  
-  .chartDropdown {
-    font-size: 0.9rem;
-    line-height: 1.4rem;
-    font-weight: 500;
-    cursor: pointer;
-    user-select: none;
-    position: static;
-  }
-  
-  .chartDropdownBox {
-    position: absolute;
-    text-align: left;
-    border-radius: 0.25rem;
-    white-space: nowrap;
-    max-height: 0px;
-    /*transition: 300ms ease-in-out;*/
-    top: 1.3em;
-    right: 3.4em;
-  }
-  
-  .chartDropdownBox ul {
-    padding-left: 0;
-  }
-  
-  .chartDropdown:hover + div.chartDropdownBox {
-    max-height: 6.6em;
-    /*transition: 300ms ease-in-out;*/
-    padding: 0em 1em;
-  }
-  
-  .chartDropdownBox:hover {
-    max-height: 6.6em;
-    /*transition: 300ms ease-in-out;*/
-    padding: 0em 1em;
-  }
-  
-  .chartDropdown:hover + div.chartDropdownBox li {
-    opacity: 1;
-    max-height: 100%;
-  }
-  
-  .chartDropdownBox:hover li {
-    opacity: 1;
-    max-height: 100%;
-  }
-  
-  .chartDropdownBox li {
-    list-style-type: none;
-    float: none !important;
-    margin: 0 !important;
-    overflow: hidden;
-    opacity: 0;
-    max-height: 0px;
-    /*transition: 300ms ease-in-out;*/
-  }
-  
-  .chartDropdown button {
-    cursor: pointer;
-    border: none;
-    background-color: inherit;
-    font-size: inherit;
-    line-height: inherit;
-    font-weight: inherit;
-    font-family: inherit;
-    color: inherit;
-    padding: inherit;
-  }
-  
-  @keyframes spinning {
-    from { transform: rotate(0deg) }
-    to { transform: rotate(360deg) }
-  }
-  .spin {
-    animation-name: spinning;
-    animation-duration: 1.5s;
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;
-  }
-  
+}
+
+.chartDropdownWrapper {
+  position: relative;
+}
+
+.chartDropdown {
+  font-size: 0.9rem;
+  line-height: 1.4rem;
+  font-weight: 500;
+  cursor: pointer;
+  user-select: none;
+  position: static;
+}
+
+.chartDropdownBox {
+  position: absolute;
+  text-align: left;
+  border-radius: 0.25rem;
+  white-space: nowrap;
+  max-height: 0px;
+  /*transition: 300ms ease-in-out;*/
+  top: 1.3em;
+  right: 3.4em;
+}
+
+.chartDropdownBox ul {
+  padding-left: 0;
+}
+
+.chartDropdown:hover + div.chartDropdownBox {
+  max-height: 6.6em;
+  /*transition: 300ms ease-in-out;*/
+  padding: 0em 1em;
+}
+
+.chartDropdownBox:hover {
+  max-height: 6.6em;
+  /*transition: 300ms ease-in-out;*/
+  padding: 0em 1em;
+}
+
+.chartDropdown:hover + div.chartDropdownBox li {
+  opacity: 1;
+  max-height: 100%;
+}
+
+.chartDropdownBox:hover li {
+  opacity: 1;
+  max-height: 100%;
+}
+
+.chartDropdownBox li {
+  list-style-type: none;
+  float: none !important;
+  margin: 0 !important;
+  overflow: hidden;
+  opacity: 0;
+  max-height: 0px;
+  /*transition: 300ms ease-in-out;*/
+}
+
+.chartDropdown button {
+  cursor: pointer;
+  border: none;
+  background-color: inherit;
+  font-size: inherit;
+  line-height: inherit;
+  font-weight: inherit;
+  font-family: inherit;
+  color: inherit;
+  padding: inherit;
+}
+
+@keyframes spinning {
+  from { transform: rotate(0deg) }
+  to { transform: rotate(360deg) }
+}
+.spin {
+  animation-name: spinning;
+  animation-duration: 1.5s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+
+.search {
+  cursor: text;
+  height: 2rem;
+  display: inline-block;
+  border-radius: 2rem;
+  font-size: .9rem;
+  line-height: 2rem;
+  padding: 0 0.5rem 0 2rem;
+  outline: 0;
+  transition: all ease .3s;
+}
+
+.regionCheckbox {
+  margin-left: .5em;
+}
+
+.githubBtn {
+  float: right;
+  line-height: 2rem;
+}
+
+@media (max-width: 690px) {
   .search {
-    cursor: text;
-    height: 2rem;
-    display: inline-block;
-    border-radius: 2rem;
-    font-size: .9rem;
-    line-height: 2rem;
-    padding: 0 0.5rem 0 2rem;
-    outline: 0;
-    transition: all ease .3s;
-  }
-  
-  .regionCheckbox {
-    margin-left: .5em;
-  }
-  
-  .githubBtn {
     float: right;
-    line-height: 2rem;
   }
-  
-  @media (max-width: 690px) {
-    .search {
-      float: right;
-    }
-    .regionCheckbox, .githubBtn {
-      padding-top: .5em;
-      margin-left: 0;
-      display: block;
-      float: none;
-    }
+  .regionCheckbox, .githubBtn {
+    padding-top: .5em;
+    margin-left: 0;
+    display: block;
+    float: none;
   }
-  
-  @media (max-width: 560px) {
-    .search {
-      float: none;
-    }
-    .regionCheckbox {
-      padding-top: 1em;
-    }
+}
+
+@media (max-width: 560px) {
+  .search {
+    float: none;
   }
+  .regionCheckbox {
+    padding-top: 1em;
+  }
+}
+
+.customContainer {
+  border-width: 1px;
+  border-style: solid;
+  padding: .1rem 1.5rem;
+  margin: 1rem 0;
+  border-radius: 8px;
+}
