--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -1,8 +1,3 @@
-a {
-  color: var(--c-brand);
-  text-decoration: none;
-}
-
 html {
     color-scheme: light;
 }
@@ -16,10 +11,21 @@ html {
 body {
   background-color: var(--c-bg);
   color: var(--c-text);
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  line-height: 1.4;
+}
+
+a {
+  color: var(--c-brand);
+  text-decoration: none;
 }
 
 td, th {
   border: 1px solid var(--c-border);
+  text-align: left;
+  padding: 8px;
 }
 
 tr:nth-child(even) {
@@ -35,28 +41,41 @@ hr {
   border: 1px solid var(--c-border-dark);
   background: var(--c-bg-search) url(@/assets/search.svg) 0.6rem 0.5rem no-repeat;
   background-size: 1rem;
+  cursor: text;
+  height: 2rem;
+  display: inline-block;
+  border-radius: 2rem;
+  font-size: .9rem;
+  line-height: 2rem;
+  padding: 0 0.5rem 0 2rem;
+  outline: 0;
+  transition: all ease .3s;
 }
 
 footer {
   border-top: 1px solid var(--c-border);
   background-color: var(--c-bg-light);
+  padding: .7em 2em;
+  margin: auto;
 }
 
 .customContainer {
   border-color: var(--c-container-border);
   background-color: var(--c-container-bg);
+  border-width: 1px;
+  border-style: solid;
+  padding: .1rem 1.5rem;
+  margin: 1rem 0;
+  border-radius: 8px;
 }
 
 code {
   color: var(--c-text-code);
   background-color: var(--c-bg-code);
-}
-
-body {
+  padding: .25rem .5rem;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  line-height: 1.4;
+  border-radius: 3px;
+  overflow-wrap: break-word;
 }
 
 table {
@@ -64,16 +83,16 @@ table {
   width: 100%;
 }
 
-td, th {
-  text-align: left;
-  padding: 8px;
-}
-
-code {
-  padding: .25rem .5rem;
-  margin: 0;
-  border-radius: 3px;
-  overflow-wrap: break-word;
+pre {
+  background-color: var(--c-bg-code);
+  border-radius: 4px;
+  overflow-x: auto;
+  white-space: pre-wrap;
+  white-space: -moz-pre-wrap;
+  white-space: -pre-wrap;
+  white-space: -o-pre-wrap;
+  word-wrap: break-word;
+  padding: .5em;
 }
 
 ul {
@@ -88,11 +107,6 @@ ul {
 .smallerMain {
   margin: auto;
   width: 65%;
-}
-
-footer {
-  padding: .7em 2em;
-  margin: auto;
 }
 
 .centerText {
@@ -129,18 +143,6 @@ footer {
   animation-timing-function: linear;
 }
 
-.search {
-  cursor: text;
-  height: 2rem;
-  display: inline-block;
-  border-radius: 2rem;
-  font-size: .9rem;
-  line-height: 2rem;
-  padding: 0 0.5rem 0 2rem;
-  outline: 0;
-  transition: all ease .3s;
-}
-
 .regionCheckbox {
   margin-left: .5em;
 }
@@ -169,12 +171,4 @@ footer {
   .regionCheckbox {
     padding-top: 1em;
   }
-}
-
-.customContainer {
-  border-width: 1px;
-  border-style: solid;
-  padding: .1rem 1.5rem;
-  margin: 1rem 0;
-  border-radius: 8px;
 }
