--- a/src/assets/vars.scss
+++ b/src/assets/vars.scss
@@ -12,6 +12,7 @@
     --c-container-bg: #e6edef;
     --c-container-border: var(--c-container-bg);
     --shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.2);
+    --navbar-height: 55px;
 }
 
 @media (prefers-color-scheme: dark) {
