--- a/src/assets/vars.scss
+++ b/src/assets/vars.scss
@@ -13,6 +13,7 @@
     --c-container-border: var(--c-container-bg);
     --shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.2);
     --navbar-height: 55px;
+    --footer-height: 137px;
 }
 
 @media (prefers-color-scheme: dark) {
