--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,3 +1,6 @@
 @import './vars.scss';
 @import './tabs.scss';
 @import './base.scss';
+@import './flex.scss';
+@import './compat.scss';
+@import './grid.scss';
