--- a/src/assets/vars.scss
+++ b/src/assets/vars.scss
@@ -6,6 +6,7 @@
     --c-bg-search: #fff;
     --c-bg-code: #eeeeee;
     --c-text: #2c3e50;
+    --c-text-grey: hsl(210, 25%, 40%);
     --c-text-code: #4e6e8e;
     --c-border: #dfe2e5;
     --c-border-dark: #eaecef;
@@ -14,6 +15,12 @@
     --shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.2);
     --navbar-height: 55px;
     --footer-height: 137px;
+
+    --c-perfect: #4caf50;
+    --c-playable: #039be5;
+    --c-runs: #fbc02d;
+    --c-loads: #ab47bc;
+    --c-unplayable: #f44336;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -24,6 +31,7 @@
         --c-bg-search: #22272e;
         --c-bg-code: #262c34;
         --c-text: #adbac7;
+        --c-text-grey: hsl(210, 10%, 55%);
         --c-text-code: #8b9eb0;
         --c-border: #34404c;
         --c-border-dark: #3e4c5a;
