--- a/src/assets/compat.scss
+++ b/src/assets/compat.scss
@@ -2,6 +2,12 @@
     margin-bottom: 2em;
 }
 
+.compatIndicatorGrid {
+    font-size: .5em;
+    padding-right: 4px;
+    vertical-align: middle;
+}
+
 .compatIndicator {
     font-size: .5em;
     padding-inline: 1em 1.2em;
