new css animations

--- a/src/assets/compat.scss
+++ b/src/assets/compat.scss
@@ -36,6 +36,11 @@
     box-shadow: var(--compat-shadow);
     cursor: pointer;
     user-select: none;
+    transition: transform ease-in-out 150ms, background 100ms, color 100ms, border 100ms;
+}
+
+.compatItem:hover {
+    transform: scale(1.05);
 }
 
 .perfect {
@@ -100,7 +105,6 @@
 @media (prefers-color-scheme: dark) {
     .compatItem {
         background-color: var(--c-container-bg);
-        transition: background-color 150ms;
         border: 2px solid rgba(0,0,0,0);
     }
     .compatItem:hover {
