--- a/src/assets/vars.scss
+++ b/src/assets/vars.scss
@@ -66,8 +66,8 @@ $unplayable: #f44336;
         --c-text-grey: #{mix($dm-text, black, 75%)};
         --c-text-code: #{mix($dm-text, black, 85%)};
 
-        --c-border: #{mix($text, white, 98%)};
-        --c-border-dark: #{mix($text, white, 90%)};
+        --c-border: #{mix($dm-container-background, white, 92%)};
+        --c-border-dark: #{mix($dm-container-background, white, 87%)};
 
         --c-container-bg: #{$dm-container-background};
         --c-container-border: var(--c-container-bg);
