--- a/src/assets/grid.scss
+++ b/src/assets/grid.scss
@@ -6,8 +6,21 @@
     grid-template-columns: 50% 50%;
 }
 
-.gridItem:nth-child(odd) {
-    padding-right: 1em;
+.gridItem {
+    transition: background 50ms ease-in-out;
+    padding: .4em;
+    margin-block: .1em;
+    margin-left: -.4em;
+    border-radius: 14px;
+    width: calc(100% - 1.5em);
+
+    &:nth-child(odd) {
+        padding-right: 1em;
+    }
+
+    &:hover {
+        background: var(--c-bg-navbar-item);
+    }
 }
 
 @media (max-width: 700px) {
@@ -22,7 +35,6 @@
 
 .iconGrid {
     grid-template-columns: calc(64px + 4px + 2px + .5em) auto;
-    padding-block: .5em;
 }
 
 .gridComment {
