--- a/src/assets/grid.scss
+++ b/src/assets/grid.scss
@@ -26,6 +26,9 @@
     .gridItem:nth-child(odd) {
         width: calc(100% - 1.5em);
     }
+    .gridItem:nth-child(even) {
+        width: calc(100% + .4em);
+    }
 }
 
 @media (max-width: 700px) {
