--- a/src/assets/vars.scss
+++ b/src/assets/vars.scss
@@ -63,7 +63,7 @@ $unplayable: #f44336;
         --c-navbar-hover: hsl(189, 70%, 65%);
 
         --c-bg: #{$dm-background};
-        --c-bg-rgb: #{$dm-background-rgb}
+        --c-bg-rgb: #{$dm-background-rgb};
         --c-bg-light: #{mix($dm-background, black, 99%)};
         --c-bg-lighter: #{mix($dm-container-background, white, 98%)};
         --c-bg-search: var(--c-bg-code);
